added separate div for total costs to allow styling

--- a/assignment/style.css
+++ b/assignment/style.css
@@ -17,3 +17,11 @@ input {
 table {
     padding:20px;
 }
+
+#monthly-cost-label {
+    display: inline;
+}
+
+#monthly-cost-value {
+    display:inline;
+}
